--- a/src/LagoVista.AspNetCore.Identity/T4ResourceGenerator.tt
+++ b/src/LagoVista.AspNetCore.Identity/T4ResourceGenerator.tt
@@ -28,18 +28,20 @@ This template if free for redistribution in accordance with the same license.
 <#@ import namespace="EnvDTE" #>
 <#@ import namespace="EnvDTE80" #>
 <#@ import namespace="Microsoft.VisualStudio.TextTemplating" #>
-<#  
+<# WriteLine("/*" + DateTime.Now.ToString() + "*/"); #>
+<#
    var serviceProvider = Host as IServiceProvider;
+
     if (serviceProvider != null) {
-        Dte = serviceProvider.GetService(typeof(SDTE)) as DTE;
+		//Dte = serviceProvider.GetService(typeof(SDTE)) as DTE;
+		Dte = (EnvDTE.DTE) serviceProvider.GetCOMService(typeof(EnvDTE.DTE));
     }
 
-    // Fail if we couldn't get the DTE. This can happen when trying to run in TextTransform.exe
-    if (Dte == null) {
+	if (Dte == null) {
         throw new Exception("T4MVC can only execute through the Visual Studio host");
     }
-
-    Project = GetProjectContainingT4File(Dte);
+   
+  Project = GetProjectContainingT4File(Dte);
 
     if (Project == null) {
         Error("Could not find the VS Project containing the T4 file.");
@@ -49,9 +51,9 @@ This template if free for redistribution in accordance with the same license.
 	 AppRoot = Path.GetDirectoryName(Project.FullName) + '\\';
 	 RootNamespace = Project.Properties.Item("RootNamespace").Value.ToString();
 #>
-using System.Threading;
-using System.Reflection;
 using System.Globalization;
+using System.Reflection;
+
 <#
 try{
 	AllEntries = new List<ResourceEntry>();
@@ -62,7 +64,7 @@ try{
 	var currentClass = "";
 	var thisIsFirstEntryInClass = true;
 	var names = new List<string>();
-	foreach(var entry in AllEntries)
+	foreach(var entry in AllEntries)	
 	{
 	    WriteLine("//" + entry.Path + ":" + entry.File+ ":" + entry.Name);
 
@@ -72,7 +74,7 @@ try{
 
 		bool namesapceIsChanging = newNamespace != currentNamespace;
 		bool classIsChanging = namesapceIsChanging || newClass != currentClass;
-		
+		 
 		//Close out current class if class is changing and there is a current class
 		if(classIsChanging && currentClass != "")
 		{
@@ -103,7 +105,7 @@ try{
 	
 		//Emit code for the ResourceManager property and GetResourceString method for the current class
 		#>
-        private static global::System.Resources.ResourceManager resourceMan;
+        private static global::System.Resources.ResourceManager _resourceManager;
         
         /// <summary>
         ///   Returns the cached ResourceManager instance used by this class.
@@ -113,12 +115,12 @@ try{
 		{
             get 
 			{
-                if (object.ReferenceEquals(resourceMan, null)) 
+                if (object.ReferenceEquals(_resourceManager, null)) 
 				{
                     global::System.Resources.ResourceManager temp = new global::System.Resources.ResourceManager("<#=string.Format("{0}.{1}{2}", RootNamespace, entry.Path + "." + entry.File, entry.Type) #>", typeof(<#=entry.File#>).GetTypeInfo().Assembly);
-                    resourceMan = temp;
+                    _resourceManager = temp;
                 }
-                return resourceMan;
+                return _resourceManager;
             }
         }
         
@@ -128,11 +130,7 @@ try{
         [global::System.ComponentModel.EditorBrowsableAttribute(global::System.ComponentModel.EditorBrowsableState.Advanced)]
         private static string GetResourceString(string key, params string[] tokens)
 		{
-#if NET461
-			var culture = Thread.CurrentThread.CurrentCulture;
-#else
-			var culture = CultureInfo.CurrentCulture;
-#endif
+			var culture = CultureInfo.CurrentCulture;;
             var str = ResourceManager.GetString(key, culture);
 
 			for(int i = 0; i < tokens.Length; i += 2)
@@ -211,6 +209,7 @@ catch(Exception ex)
 }
 #>
 }
+
 <#+
     const string Kind_PhysicalFolder = "{6BB5F8EF-4483-11D3-8BCF-00C04F8EC28C}";
 	bool AlwaysKeepTemplateDirty = true;
@@ -305,6 +304,7 @@ string ConvertToPascalCase(string phrase)
 	return sb.ToString();
 }
 
+
 void EmitNamesInnerClass(List<string> names)
 {
 	if(names.Any())
@@ -325,14 +325,14 @@ Project GetProjectContainingT4File(DTE dte) {
     ProjectItem projectItem = dte.Solution.FindProjectItem(Host.TemplateFile);
 
     // If the .tt file is not opened, open it
-    if (projectItem.Document == null)
-        projectItem.Open(Constants.vsViewKindCode);
+//    if (projectItem.Document == null)
+  //      projectItem.Open(Constants.vsViewKindCode);
 
     if (AlwaysKeepTemplateDirty) {
         // Mark the .tt file as unsaved. This way it will be saved and update itself next time the
         // project is built. Basically, it keeps marking itself as unsaved to make the next build work.
         // Note: this is certainly hacky, but is the best I could come up with so far.
-        projectItem.Document.Saved = false;
+    //    projectItem.Document.Saved = false;
     }
 
     return projectItem.ContainingProject;
@@ -347,4 +347,5 @@ struct ResourceEntry
 	public string Value { get; set; }
 	public string Comment { get; set; }
 }
+
 #>
